# mapmint

./: .gitignore  CODE_OF_CONDUCT.md  Dockerfile.mapmint  INSTALL.md  LICENSE  Main_cfg.md  README.md  ayoubft_pr.md  con.xsl  docker-compose-mapmint.yml  docker-compose.yml
.github/workflows/: main.yml
admin-tools/deploy/: add_trial.sh  make_cfg.py  make_db.py  make_vhost.py
cesium_test/: US_Hospitals_CSV.csv  package-lock.json  package.json  webpack.config.js
cesium_test/src/: US_Hospitals_CSV.csv  index.html  index.js
docker/: README.md  default.conf  main.cfg  mapcache.xml
docker/stable/: Dockerfile.lo  Dockerfile.mapmint
documentation/: Makefile  conf.py  index.txt  make.bat
documentation/_static/: basic.css  default.css
documentation/_templates/: layout.html
documentation/apps/: appconfig.txt  index.txt  mapspanel.txt
documentation/dashboard/: ataglance.txt  configuration.txt  index.txt  recentprojects.txt
documentation/data/: datasources.txt  datastores.txt  index.txt  processing.txt
documentation/documents/: docslist.txt  index.txt  infopanel.txt
documentation/indicators/: index.txt  indicatorspanel.txt  indicatorstree.txt  presentation.txt
documentation/introduction/: index.txt  introduction.txt  usemapmint.txt  usersmanagement.txt
documentation/maps/: index.txt  layerstree.txt  mapsviewer.txt
documentation/territories/: index.txt  infopanel.txt  territorieslist.txt
documentation/themes/: index.txt  infopanel.txt  themeslist.txt
examples/: README.md
mapmint-services/: BufferPy.zcfg  DifferencePy.zcfg  GetConf.zcfg  SaveConf.zcfg  ZOO-api.js  ZOO-proj4js.js  customize.py  display.zcfg  distiller  main.cfg  manage_users  mm_access.py  mmowssp.py  mmsession.py  raster-tools  service.py  shortInteger.py  sqlite_module.py  symbol-tools  symbol_tools  vector-converter  vector-tools  vector_tools  wfs-t
mapmint-services/authenticate/: clogIn.zcfg  clogOut.zcfg  getLostPassword.zcfg  logIn.zcfg  logOut.zcfg  login.tmpl  registerUser.zcfg  saveUserPreferences.zcfg  service.py
mapmint-services/classifier/: getClassifierImage.zcfg  service.py
mapmint-services/configuration/: GetConf.zcfg  SaveConf.zcfg  service.py
mapmint-services/context/: loadContext.zcfg  main.cfg  saveContext.zcfg  service.py
mapmint-services/datastores/: displayHTML.zcfg  isFavSrs.zcfg  list.zcfg  loadMapForDs.zcfg  main.cfg  mmVectorInfo2MapJs.zcfg  redrawDsList.zcfg  saveDataStorePrivileges.zcfg  saveFavSrs.zcfg  service.js  service.py
mapmint-services/georeferencer/: copyLayerFile.zcfg  cropImage.zcfg  dropLayerFile.zcfg  georeference.zcfg  listGeoreferencedProject.zcfg  loadGCP.zcfg  saveGCPAsCSV.zcfg  saveGeorefProject.zcfg  service.js  service.py
mapmint-services/manage-users/: AddGroup.zcfg  AddUser.zcfg  GetGroups.zcfg  GetGroupsUser.zcfg  GetUsersGroup.zcfg  UpdateGroup.zcfg  getTableFeatures.zcfg  manage_users.py  mapmint_db.sql  requestGroup.zcfg  service_users.py
mapmint-services/manage_users/: GetGroupsUser.zcfg  GetUserInfo.zcfg  GetUsers.zcfg  UpdateUser.zcfg  getTableContent.zcfg  manage_users.py  requetes_exemple.txt  service_users.py
mapmint-services/mapfile/: addGridToMap.zcfg  addGroupToMap.zcfg  addLabelLayer.zcfg  addLabelLayer0.zcfg  canAccessLayer.zcfg  classifyMap.zcfg  classifyMap0.zcfg  createLegend.zcfg  createLegend0.zcfg  deleteStep.zcfg  getFlyAddress.zcfg  getFullLayerProperties.zcfg  getGroupList.zcfg  getInitialInfo.zcfg  getLayers.zcfg  getLayersList.zcfg  getMapLayerProperties.zcfg  getMapLayersInfo.zcfg  getSimpleMapList.zcfg  isPolygon.zcfg  listMap.zcfg  listStep.zcfg  loadMapForDs.zcfg  mmDataStoreHasMap.zcfg  mmSprites.py  mmVectorInfo2MapPy.zcfg  openInManager.zcfg  options.zcfg  readTemplate.zcfg  redrawDsList.zcfg  refreshLayerInfo.zcfg  refreshLayersList.zcfg  removeGroupFromMap.zcfg  removeLabelLayer.zcfg  removeLayer.zcfg  removeMap.zcfg  renameGroupInMap.zcfg  saveFlyAddress.zcfg  saveGeoreferencedProject.zcfg  saveLabel.zcfg  (+26 more)
mapmint-services/mm4me/: createSqliteDB4ME.zcfg  joinFiles.zcfg  replaySqliteHistory.zcfg  service.js
mapmint-services/np/: PaperMint.py  ZOO-api.js  addLayerForIndex.zcfg  clientDelete.zcfg  clientImportDataset.zcfg  clientInsert.zcfg  clientPrint.zcfg  clientView.zcfg  clientViewTable.zcfg  convertTo.zcfg  createAgregate.zcfg  createIndex.zcfg  createTempFile.zcfg  csv2ods.zcfg  deleteElement.zcfg  details.zcfg  dropTable.zcfg  getIndex.zcfg  (+51 more)
mapmint-services/symbol-tools/: configure.ac  service.c
mapmint-services/symbol-tools/cgi-env/: getSymbolChooser4TTF.zcfg  service.py
mapmint-services/vector-tools-src/: Makefile  Makefile.in  ZOO-api.js  configure  configure.ac  epsglookup.py  example_epsglookup.py  example_epsglookup_xml.py  gradien.py  makefile.vc  service.c
mapmint-services/vector-tools-src/cgi-env/: BufferPy.zcfg  CentroidPy.zcfg  DifferencePy.zcfg  EnvelopePy.zcfg  ExteriorRingPy.zcfg  FusionIntersectsPy.zcfg  Intersection.zcfg  Intersection0.zcfg  IntersectionPy.zcfg  Ogrtindex.zcfg  PointOnSurface.zcfg  Remove.zcfg  SpatialQuery.zcfg  SymDifferencePy.zcfg  UnionOnePy.zcfg  UnionPy.zcfg  Xml2JSON.zcfg  access.zcfg  createGrid.zcfg  createTindex.zcfg  mmListVectorDir.zcfg  mmVectorInfo2Map.zcfg  mmservice.py  service.js  service.py  shortInteger.py  vectInfo.py  vectInfo.zcfg  vectSql.py
mapmint-services/wfs-t/: Makefile  Makefile.in  configure  configure.ac
mapmint-services/wfs-t/cgi-env/: Transaction.zcfg
mapmint-ui/: .htaccess  connexion.html  iepngfix.htc  index.html  test.html  web.config
public_map/: .htaccess  ScaleBar.js  _index.css  default_init.js  flexigrid.js  jquery.easyui.min.js  jquery.fixedcenter.js  jquery.timelinr-0.9.52.js  mapmint-default.css  mapmint-fullscreen.css  mapmint-fullscreen.js  mapmint-largemap.css  mapmint-leftcol.css  mapmint-mobile.css  mapmint-nude.css  mapmint-nudemap.css  mapmint-rightcol.css  oldbrowser.css  progress-bar.js  timelinr_style.css  tree.css  window.css
thirds/: mapserver-encoding.patch  mapserver-getfeatureinfo-fix  mapserver-point-sld-fix  ms-6.2.0-full.patch
visualize_a_obj_file/: index.html  scripts.js
(+1025 files in other folders)
